# Argus

./: CMakeLists.txt  README.md
.github/workflows/: build-and-release.yml
src/: argus.c
